--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "demo",
+  "name": "profile-contact-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "mocha"
+    "node": "node ./bin/www",
+    "debug": "ONE_KEY=8xVxIxoY1X DEPLOY_ENV=local DEBUG=myapp:* npm run node",
+    "start": "DEPLOY_ENV=prod npm run node"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "@google-cloud/firestore": "^4.15.1",
+    "@google-cloud/secret-manager": "^3.10.1",
+    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
-  },
-  "devDependencies": {
-    "mocha": "^5.1.1",
-    "supertest": "^3.0.0"
+    "express": "~4.16.1",
+    "morgan": "~1.9.1",
+    "node-uuid": "^1.4.8",
+    "passport": "^0.5.0",
+    "passport-headerapikey": "^1.2.2"
   }
 }
