Fixed CICD syntax issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ build:
     - docker push $GCP_DOCKER_REGION/$GCP_PROJECT/$GCP_DOCKER_REPO/$DOCKER_IMAGE
   stage: build
   dependencies:
-    - isntall
+    - install
     # - lint
     # - test
 
