--- a/package.json
+++ b/package.json
@@ -18,7 +18,5 @@
     "passport": "^0.5.0",
     "passport-headerapikey": "^1.2.2"
   },
-  "devDependencies": {
-    "eslint": "^8.8.0"
-  }
+  "devDependencies": {}
 }
