--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.15.1",
     "@google-cloud/secret-manager": "^3.10.1",
+    "bunyan": "^1.8.15",
+    "bunyan-express-serializer": "^1.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
